--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker Image
-      run: docker build . --file Dockerfile --tag eureka:$(date +%s)
+      run: docker build . --file Dockerfile --tag eureka
     - name: Run th Docker Image
-      run: docker run eureka:$(date +%s) -p 8080:8080 && curl localhost:8080
+      run: docker run eureka -p 8080:8080 && curl localhost:8080
