--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Build the Docker Image
       run: docker build . --file Dockerfile --tag eureka
     - name: Run th Docker Image
-      run: docker run eureka -p 8080:8080 && curl localhost:8080
+      run: docker run -p 8080:8080 eureka && curl localhost:8080
